k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: insurance-2306275310-fe-service
  namespace: default
spec:
  selector:
    app: insurance-2306275310-fe # Harus sama dengan label di Deployment
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80 # Port tempat Nginx/FE berjalan di dalam container
